<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MobiPerf</string>
    <string name="user_agent">Linux; Android</string>
    <string name="default_user_agent">"MobiPerf-2.0 (Linux; Android)"</string>
    <string name="ping_executable">ping</string>
    <string name="ping6_executable">ping6</string>
    <string name="serverUrl">https://nclab-mobiperf.appspot.com</string>
    <string name="anonymousServerUrl">https://nclab-mobiperf.appspot.com/anonymous</string>
    <string name="testServerUrl"></string>
    <string name="menuQuit">Quit</string>
    <string name="menumPause">Pause</string>
    <string name="pauseMessage">MobiPerf is paused.</string>
    <string name="menuResume">Resume</string>
    <string name="resumeMessage">MobiPerf is running.</string>
    <string name="menuSettings">Settings</string>
    <string name="menuAbout">About</string>
    <string name="menuLog">System Log</string>
    <string name="measureIdLabel">ID: </string>
    <string name="targetHostPrompt">Target Hostname/IP</string>
    <string name="defaultTargetHost">192.168.123.105</string>
    <string name="targetHostHint">Default target host is 192.168.123.105</string>
    <string name="measurementTypePrompt">Measurement Type</string>
    <string name="defaultDomain">www.google.com</string>
    <string name="pingTargetHint">www.google.com</string>
    <string name="pingTargetLabel">Where to ping?</string>
    <string name="tracerouteTargetLabel">Target Hostname/IP?</string>
    <string name="UDPBurstTargetLabel">Server Name/IP?</string>
    <string name="UDPBurstDirLabel">Direction:</string>
    <string name="UDPBurstTargetHint">www.google.com</string>
    <string name="UDPPacketsPerSecond">Packets per second</string>
    <string name="UDPNumberOfPackets">Number of packets</string>
    <string name="DefaultUDPPacketsPerSecondText">100</string>
    <string name="DefaultUDPNumberOfPacketsText">2000</string>
    <string name="httpUrlHint">www.google.com</string>
    <string name="httpUrlLabel">URL Address</string>
    <string name="checkinIntervalPrefKey">KEY_CHECKEDIN_INTERVAL</string>
    <string name="measureWhenPluggedPrefKey">KEY_MEASURE_WHEN_PLUGGED</string>
    <string name="batteryMinThresPrefKey">KEY_BATTERY_THRES</string>
    <string name="startOnBootPrefKey">KEY_START_ON_BOOT</string>
    <string name="accountPrefKey">PREF_KEY_ACCOUNT</string>
    <string name="notificationSchedulerStarted">MobiPerf service has started</string>
    <string name="notificationServiceRunning">MobiPerf service is running</string>
    <string name="userMeasurementSuccessToast">Measurement is running. Results will show up shortly.</string>
    <string name="userMeasurementFailureToast">The scheduler is busy, please run the measurement later</string>
    <string name="userMeasurementBusySchedulerToast">The scheduler is busy, your measurement will start shortly</string>
    <string name="invalidParameterExceptionMeasurementToast">Some parameters are not correct. Please make sure all measurement parameters are set properly.</string>
    <string name="ioExceptionMeasurementToast">Failed to run test. It\'s possible there is no network connection. Please make sure you have a network connection before running tests.</string>
    <string name="exceptionMeasurementToast">An unknown error occurred when trying to run the measurement test. Please try again.</string>
    <string name="invalidCheckinIntervalToast">Invalid setting! Please choose an interval between 1 and 24 hours</string>
    <string name="invalidBatteryToast">Invalid setting! Please choose a battery level between 0 and 100 percent</string>
    <string name="menuInitializationExceptionToast">Exception occurs during menu initialization.</string>
    <string name="powerThreasholdReachedMsg">Measurement paused - below battery threshold</string>
    <string name="terms">MobiPerf is a useful tool that collects network measurement results for academic research. Please see http://mobiperf.com/privacy for more details. If you agree that we can collect such information, click agree. On the account selection screen, you will have the option to submit results anonymously. If you do not agree, the application will exit.</string>
    <string name="aboutTitle">About</string>
    <string name="aboutText">MobiPerf is an open source application for measuring network performance on mobile platforms. You can measure your network\'s throughput and latency, as well as other useful network metrics. MobiPerf also performs measurements at regular intervals in the background.\n\nThe privacy policy and EULA can be found at http://www.mobiperf.com/privacy </string>
    <string name="aboutContact">\nHomepage:\nhttp://www.mobiperf.com\n\nCode repository:\nhttps://github.com/Mobiperf/MobiPerf\n\nEmail:\nmobiperf@googlegroups.com</string>
    <string name="selectedString">is selected for authenticating with MobiPerf server.</string>
    <string name="defaultUser">Anonymous</string>
    <string name="TCPThroughputDirLabel">Direction:</string>
    <string name="TCPThroughputTargetHint">m-lab</string>
    
    
</resources>
